# AbGen

./: .gitignore  CITATION.cff  MLproject  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: benchmark.yml
benchmarks/results/: baseline_ci_dpo.json  baseline_ci_mamba.json  baseline_ci_transformer.json
configs/: README.md  benchmarks.yaml  benchmarks_ci.yaml  benchmarks_local.yaml  data_ci.yaml  model.yaml  model_mamba.yaml
configs/legacy/: benchmarks_local.yaml  model_mamba.yaml
data/: DATA_PROVENANCE.md
demo/: app.py
docs/: CASE_STUDIES.md  LEADERBOARD.md  LIMITATIONS.md  METHODS.md  README.md  REPO_LAYOUT.md  REPRODUCIBILITY.md  RESULTS.md  STATUS.md  index.md
docs/data/: README.md
docs/design/: CASE_STUDIES.md  METHODS.md  README.md
docs/evaluation/: LEADERBOARD.md  README.md  RESULTS.md
docs/reference/: CLAIMS.md  LIMITATIONS.md  METHODS.md  README.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  STATUS.md
docs/training/: README.md
models/: registry.json
scripts/: README.md  bench_dataloader.py  bench_mamba.py  bench_train.py  download_oas_data.py  fetch_airr_data.py  generate.py  make_preferences.py  run_ablations.py  run_benchmarks.py  run_ci_guardrails.py  run_design_benchmark.py  run_guardrails.py  train_cv.py  train_dpo.py  verify_backbone.py  verify_benchmarks.py  verify_mamba.py  visualize_attention.py
scripts/dev/: bench_mamba.py  bench_train.py  verify_benchmarks.py  verify_mamba.py
src/abprop/: __init__.py  rewards.py
tests/: test_cdr_benchmark.py  test_config_overrides.py  test_dataset.py  test_dpo_math.py  test_generation.py  test_imports_minimal.py  test_mamba_padding.py  test_model_loading.py  test_preferences_schema.py  test_server_inference.py  test_uncertainty.py
tests/fixtures/: oas_fixture.csv  (+1 more)
(+36 files in other folders)
